--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,97 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+@layer base {
+	*,
+	*::before,
+	*::after {
+		@apply box-border;
+	}
+	* {
+		@apply m-0 p-0;
+	}
+	body {
+		@apply max-h-screen;
+	}
+	h1 {
+		@apply text-4xl font-extrabold;
+	}
+	h2 {
+		@apply text-3xl font-extrabold;
+	}
+	h3 {
+		@apply text-2xl font-bold;
+	}
+	h4 {
+		@apply text-xl font-bold;
+	}
+	h5 {
+		@apply text-lg font-semibold;
+	}
+	h6 {
+		@apply text-base font-semibold;
+	}
+	header {
+		@apply sticky top-0 left-0 z-10 flex flex-row items-center justify-center h-[7vh] px-4 bg-white;
+	}
+	header > nav {
+		@apply w-full grid grid-cols-3 grid-flow-row;
+	}
+	header > nav > div {
+		@apply w-full inline-flex items-center;
+	}
+	header > nav > div:first-child {
+		@apply justify-start;
+	}
+	header > nav > div:nth-child(2) {
+		@apply justify-center;
+	}
+	header > nav > div:last-child {
+		@apply justify-end;
+	}
+	section {
+		@apply w-full min-h-screen max-h-fit flex flex-col;
+	}
+	section:first-of-type {
+		@apply min-h-[93vh] max-h-[93vh];
+	}
+	button {
+		@apply px-3 py-1.5 rounded-lg font-semibold;
+	}
+	form {
+		@apply flex flex-col items-start justify-center space-y-2;
+	}
+	input[type="text"],
+	input[type="number"],
+	textarea {
+		@apply w-full px-2 py-1.5 rounded-lg border-2;
+	}
+	label {
+		@apply text-sm font-semibold;
+	}
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+@layer components {
+	.dropdown-container {
+		@apply fixed text-right;
+	}
+	.dropdown-menu {
+		@apply relative inline-block text-left;
+	}
+	.dropdown-button {
+		@apply inline-flex w-full justify-center p-4 rounded-full bg-gray-300;
+	}
+	.dropdown-menu-items {
+		@apply absolute right-0 mt-2 w-56 origin-top-right divide-y divide-gray-100 rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none;
+	}
+	.dropdown-menu-group {
+		@apply px-1 py-1;
+	}
+	.dropdown-menu-item {
+		@apply flex w-full items-center rounded-md px-2 py-2 text-sm font-semibold;
+	}
+	.dropdown-menu-item-hover {
+		@apply bg-gray-500 text-white;
+	}
 }
