--- a/styles/globals.css
+++ b/styles/globals.css
@@ -70,6 +70,9 @@
 	label {
 		@apply text-sm font-semibold;
 	}
+	tr {
+		@apply flex;
+	}
 }
 
 @layer components {
@@ -94,4 +97,32 @@
 	.dropdown-menu-item-hover {
 		@apply bg-gray-500 text-white;
 	}
+	.dropzone-with-images {
+		@apply w-full grid grid-cols-1 grid-flow-row;
+	}
+	.dropzone {
+		@apply w-full h-auto aspect-[16/3] p-1 rounded-lg border-2 cursor-pointer flex flex-col items-center justify-center;
+	}
+	.dropzone:hover {
+		@apply border-transparent bg-gray-200;
+	}
+	.dropzone-image-container {
+		@apply grid grid-cols-5 grid-flow-row gap-4 py-4;
+	}
+	.dropzone-image {
+		@apply relative w-full h-auto aspect-square;
+	}
+	.dropzone-image-backdrop {
+		@apply absolute top-0 left-0 z-[2] w-full h-full opacity-0 flex flex-col items-center justify-center bg-red-400/60 rounded-2xl text-white cursor-pointer;
+	}
+	.dropzone-image-backdrop > span {
+		@apply text-sm font-semibold text-center;
+	}
+	.error-message {
+		@apply text-sm font-semibold text-red-500;
+	}
+	.error-message::first-letter {
+		@apply capitalize;
+	}
 }
+
