--- a/styles/globals.css
+++ b/styles/globals.css
@@ -86,7 +86,7 @@
 		@apply inline-flex w-full justify-center p-4 rounded-full bg-gray-300;
 	}
 	.dropdown-menu-items {
-		@apply absolute right-0 mt-2 w-56 origin-top-right divide-y divide-gray-100 rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none;
+		@apply absolute right-0 mb-2 w-56 origin-top-right divide-y divide-gray-100 rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none;
 	}
 	.dropdown-menu-group {
 		@apply px-1 py-1;
